Fix Bug 296114 - Kontacts complains it is already running when restarting

from DrKonqi

FIXED-IN: 4.10
BUG: 296114

Lock file is not necessary now in akonadi.
We access to mail from resources which are able to be access by several
program.