kmstartup.cpp
@@ -90,6 +90,7 @@ void checkConfigUpdates() {
 }
 
 void lockOrDie() {
+#if 0
 // Check and create a lock file to prevent concurrent access to kmail files
   QString appName = KGlobal::mainComponent().componentName();
   if ( appName.isEmpty() )
@@ -200,6 +201,7 @@ void lockOrDie() {
   group.writeEntry( "appName", appName );
   group.writeEntry( "programName", programName );
   group.sync();
+#endif
 }
 
 void insertLibraryCataloguesAndIcons() {
@@ -238,10 +240,12 @@ void insertLibraryCataloguesAndIcons() {
 
 void cleanup()
 {
+#if 0	
   const QString lockLocation = KStandardDirs::locateLocal("data", "kmail2/lock");
   KConfig config(lockLocation, KConfig::SimpleConfig);
   KConfigGroup group(&config, "");
   group.writeEntry("pid", -1);
   group.sync();
+#endif
 }
 }
